# entrega-02/api.yaml
@@ -6,30 +6,12 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
-  /iot:
-    get:
-      tags:
-      - iot-controller
-      operationId: obterTodosIot
-      responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/prodIOT'
+  /iot/status/{id}:
     put:
       tags:
       - iot-controller
-      operationId: atualizarProdIOT
+      operationId: atualizarStatusProdIOT
+      parameters: []
       requestBody:
         content:
           application/json:
@@ -43,50 +25,8 @@ paths:
             '*/*':
               schema:
                 type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/prodIOT'
-    post:
-      tags:
-      - iot-controller
-      operationId: adicionarIot
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/prodIOT'
-        required: true
-      responses:
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                type: string
-        "201":
-          description: Created
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/prodIOT'
-  /iot/grupo/{grupoId}:
-    get:
-      tags:
-      - iot-controller
-      operationId: obterTodosIotNoGrupo
-      parameters:
-      - name: grupoId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "404":
-          description: Not Found
+        "405":
+          description: Method Not Allowed
           content:
             '*/*':
               schema:
@@ -96,13 +36,12 @@ paths:
           content:
             '*/*':
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/prodIOT'
+                $ref: '#/components/schemas/prodIOT'
+  /iot/grupo/status/{grupoId}:
     put:
       tags:
       - iot-controller
-      operationId: atualizarTodosIotsDoGrupo
+      operationId: atualizarStatusDeTodosIotsDoGrupo
       parameters:
       - name: grupoId
         in: path
@@ -119,6 +58,51 @@ paths:
       responses:
         "404":
           description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/prodIOT'
+  /iot/grupo/dados/{grupoId}:
+    put:
+      tags:
+      - iot-controller
+      operationId: atualizarDadosDeTodosIotsDoGrupo
+      parameters:
+      - name: grupoId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/prodIOT'
+        required: true
+      responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
           content:
             '*/*':
               schema:
@@ -150,8 +134,49 @@ paths:
             '*/*':
               schema:
                 type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
         "200":
           description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/prodIOT'
+  /iot/dados/{id}:
+    put:
+      tags:
+      - iot-controller
+      operationId: atualizarDadosProdIOT
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/prodIOT'
+        required: true
+      responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/prodIOT'
   /iot/associar/{iotId}/{grupoId}:
     put:
       tags:
@@ -177,8 +202,73 @@ paths:
             '*/*':
               schema:
                 type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
         "200":
           description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/prodIOT'
+  /iot:
+    get:
+      tags:
+      - iot-controller
+      operationId: obterTodosIot
+      responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/prodIOT'
+    post:
+      tags:
+      - iot-controller
+      operationId: adicionarIot
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/prodIOT'
+        required: true
+      responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
+        "201":
+          description: Created
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/prodIOT'
   /iot/{id}:
     get:
       tags:
@@ -194,6 +284,12 @@ paths:
       responses:
         "404":
           description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
           content:
             '*/*':
               schema:
@@ -222,8 +318,47 @@ paths:
             '*/*':
               schema:
                 type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
         "204":
           description: No Content
+  /iot/grupo/{grupoId}:
+    get:
+      tags:
+      - iot-controller
+      operationId: obterTodosIotNoGrupo
+      parameters:
+      - name: grupoId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                type: string
+        "405":
+          description: Method Not Allowed
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/prodIOT'
 components:
   schemas:
     prodIOT:
@@ -236,11 +371,9 @@ components:
           type: string
         status:
           type: string
-        grupo:
-          type: boolean
-        grupoId:
-          type: integer
-          format: int64
         dadosAtual:
           type: integer
           format: int32
+        grupoId:
+          type: integer
+          format: int64
